force-app/main/default/objects/Opportunity/fields/Budgeted_Costs__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Costs__c</fullName>
    <label>Budgeted Costs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>