force-app/main/default/objects/Opportunity/fields/Budgeted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Margin__c</fullName>
    <formula>Amount -  Budgeted_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>