force-app/main/default/objects/Opportunity/fields/Budgeted_Profitability__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Profitability__c</fullName>
    <formula>Budgeted_Margin__c /  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Profitability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>