force-app/main/default/objects/Opportunity/fields/Current_Costs__c.field-meta.xml
<CustomField>
    <fullName>Current_Costs__c</fullName>
    <label>Current Costs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>