force-app/main/default/objects/Opportunity/fields/Current_Margin__c.field-meta.xml
<CustomField>
    <fullName>Current_Margin__c</fullName>
    <formula>Amount  -  Current_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>