force-app/main/default/objects/Opportunity/fields/Current_Profitability__c.field-meta.xml
<CustomField>
    <fullName>Current_Profitability__c</fullName>
    <formula>Current_Margin__c  /  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Profitability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>