force-app/main/default/objects/Opportunity/fields/Date_to_invoice__c.field-meta.xml
<CustomField>
    <fullName>Date_to_invoice__c</fullName>
    <inlineHelpText>If this opportunity needs to be invoiced in the future, please specify the date</inlineHelpText>
    <label>Date to invoice</label>
    <type>Date</type>
</CustomField>