force-app/main/default/objects/Opportunity/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <displayFormat>OPP-{YYYY}-{0000}</displayFormat>
    <label>Opportunity Code</label>
    <type>AutoNumber</type>
</CustomField>