force-app/main/default/objects/Opportunity/fields/URL_Order__c.field-meta.xml
<CustomField>
    <fullName>URL_Order__c</fullName>
    <description>Link del pdf de la Orden de Pedido en Drive, a rellenar en oportunidades ganadas.</description>
    <label>URL Order</label>
    <type>Url</type>
</CustomField>