force-app/main/default/objects/Opportunity/fields/URL_Presentation__c.field-meta.xml
<CustomField>
    <fullName>URL_Presentation__c</fullName>
    <label>URL Presentation</label>
    <type>Url</type>
</CustomField>