force-app/main/default/objects/Opportunity/recordTypes/Licensing_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Licensing_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Licensing Sales Process</businessProcess>
    <label>Licensing Opportunity</label>
</RecordType>