force-app/main/default/objects/Opportunity/recordTypes/Project_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Project_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Project Sales Process</businessProcess>
    <label>Project Opportunity</label>
</RecordType>