force-app/main/default/objects/Opportunity/recordTypes/Recruiting_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Recruiting_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Recruiting Sales Process</businessProcess>
    <label>Recruiting Opportunity</label>
</RecordType>