force-app/main/default/objects/Opportunity/recordTypes/Support_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Support_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Project Sales Process</businessProcess>
    <label>Support Opportunity</label>
</RecordType>