force-app/main/default/objects/Opportunity/recordTypes/Training_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Training_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Training Sales Process</businessProcess>
    <label>Training Opportunity</label>
</RecordType>