force-app/main/default/objects/Opportunity/validationRules/Date_to_invoice_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_to_invoice_mandatory</fullName>
    <active>true</active>
    <description>You must fill in the field &quot;Date to invoice&quot; if the Stage is Closed Won</description>
    <errorConditionFormula>AND(ISPICKVAL( StageName ,&quot;Closed Won&quot;), ISBLANK( Date_to_invoice__c ))</errorConditionFormula>
    <errorDisplayField>Date_to_invoice__c</errorDisplayField>
    <errorMessage>You must fill in the field &quot;Date to invoice&quot; if the Stage is Closed Won</errorMessage>
</ValidationRule>