force-app/main/default/objects/Opportunity/validationRules/Dont_change_Discount_if_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_change_Discount_if_approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT( Approval_status__c ) = &quot;Approved&quot;,  ISCHANGED( Discount__c ) )</errorConditionFormula>
    <errorDisplayField>Discount__c</errorDisplayField>
    <errorMessage>Discount can´t be modified if opportunity has been approved</errorMessage>
</ValidationRule>